<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/your_event_constrained_layout"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_background"
    android:layout_height="match_parent">

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="45dp"/>


    <ImageView
        android:id="@+id/button_back_button"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/page_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_back_button"
        app:layout_constraintBottom_toBottomOf="@id/button_back_button"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintHorizontal_bias="0.5"/>


    <Button
        android:id="@+id/menu_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/baseline_more_vert_24"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="2dp" />


    <TextView
        android:id="@+id/milestones_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Milestones"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page_name"
        android:layout_marginTop="24dp"
        android:layout_marginStart="18dp"/>

    <ListView
        android:id="@+id/milestone_list"
        android:layout_width="339dp"
        android:layout_height="166dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/listview_outline"
        app:layout_constraintTop_toBottomOf="@id/milestones_label" />

    <TextView
        android:id="@+id/attendees_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Attendees"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/milestone_list"
        android:layout_marginTop="16dp"
        android:layout_marginStart="18dp"/>

    <Switch
        android:id="@+id/filter_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Checked-In Only"
        android:textColor="@color/black"
        android:layout_marginRight="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/attendees_label"
        android:layout_marginEnd="16dp"/>


    <ListView
        android:id="@+id/attendee_list"
        android:layout_width="340dp"
        android:layout_height="340dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/listview_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attendees_label" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/make_announcements_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Announcement"
        android:backgroundTint="@color/coral"
        android:textColor="@color/black"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="12dp"/>

    <TextView
        android:id="@+id/total_attendees_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total Attendees: "
        android:textSize="16sp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@id/total_checked_in_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/total_checked_in_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total Checked-In: "
        android:textSize="16sp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"/>

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
